--- a/Chrome Extension/popup.html
+++ b/Chrome Extension/popup.html
@@ -62,10 +62,11 @@
                     <div id="walletyes" style="padding: 20px 0 0 0; display: none;">
                         <form>
                             <p class="lead">Enter Passphrase:</p>
-                            <div style="width: 100%; padding: 0px 0 10px 0;"><input type="text" style="text-align: center;" class="form-control" id="inputSplashPassphrase">
+                            <div style="width: 100%; padding: 0px 0 10px 0;">
+                                <input type="password" style="text-align: center;" class="form-control" id="inputSplashPassphrase">
                             </div>
                             <div style="width: 135px; margin: 0 auto; ">
-                                <button id="hideshowpass" class="btn btn-xs btn-default">Hide Passphrase</button>
+                                <button type="button" id="hideshowpass" class="btn btn-xs btn-default">Show Passphrase</button>
                             </div>
                             <div align="center" style="padding-top: 20px;"><button id="setpassphraseatsplash" type="submit" class="btn btn-success">Go</button></div>
 
@@ -94,7 +95,7 @@
                     </div>
                     <div id="encryptyes" style="padding: 20px 0 0 0; display: none;">
                         <form>
-                            <p class="lead">Enter Password (min 4 char):</p>
+                            <p class="lead">Enter Password (min 6 char):</p>
                             <p id="passwordentererror" class="text-danger" style="display: none;"></p>
                             <div style="width: 100%; padding: 10px 0 30px 0;"><input type="password" style="text-align: center;" class="form-control" id="inputSplashPass"></div>
                             <div align="center"><button id="setpinatsplash" type="submit" class="btn btn-default" disabled>Set Password</button></div>
@@ -102,6 +103,7 @@
                     </div>
                     <div id="bindwallet" style="padding: 20px 0 0 0; display: none;">         
                         <form id="bindwalletform">
+                            <p class="lead">Only one Counterparty address can be linked with each SoG account.<br>Attention: Once it is set up, you won't be able to change it!</p>
                             <p class="lead">Select one public key:</p>
                             <div style="width: 100%; padding: 5px 0 25px 0;">
                                 <select id="bindwalletaddresses" name="xcp_pubkey" class="form-control" ></select>
@@ -145,7 +147,7 @@
                 <ul class="nav nav-tabs" id="allTabs">
                     <li class="active" id="walletTab"><a id="walletLink" href="#walletPage" data-toggle="tab"><img src="asset/img/wallet_icon.png" height="24" width="24"></a></li>
                     <li id="inventoryTab"><a href="#inventoryPage" data-toggle="tab"><img src="asset/img/inventory_icon.png" height="24" width="24"></a></li>
-                    <li id="ganeTab"><a href="#gamePage" data-toggle="tab"><i class="fa fa-book tabicon"></i></a></li>
+                    <!--<li id="ganeTab"><a href="#gamePage" data-toggle="tab"><i class="fa fa-book tabicon"></i></a></li>-->
                     <li id="toolsTab"><a href="#toolsPage" data-toggle="tab"><img src="asset/img/apps.png" height="24" width="24"></a></li>
                     
                     <!--    <li><a href="#gameTab" data-toggle="tab"><img src="key-icon.png" height="24" width="24"></a></li> 
@@ -228,17 +230,20 @@
                             <div id="btcbalance"><div style='font-size: 12px;'>Thinking...</div></div>
                         </div>  
                         <div id="btcsendbox">
+                            <div id="sendtokenerror" class="text-danger"></div>
                             <div class="inputtitle">Send to:</div>
                             <div align="center" style="width: 100%; padding: 0 5px 0 5px; margin-bottom: 10px;">
-                                <input type="text" class="form-control" id="sendtoaddress" placeholder="Moonga Username or Bitcoin Address">
+                                <input type="text" class="form-control" id="sendtoaddress" placeholder="Spell of Genesis Username, email or wallet Address">
                             </div>
                             <div class="inputtitle">Amount: <span id="sendUSD" style="font-weight: normal;"></span>
                             </div>
                             <div style="padding: 0 5px 0 5px;">
                                 <div align="center" style="width: 100%; margin-bottom: 15px;">
-                                    <input type="number" class="form-control" id="sendtoamount" placeholder="Enter Amount"></div>
+                                    <input type="number" class="form-control" id="sendtoamount" placeholder="Enter Amount">
+                                </div>
                                 <div align="center">
-                                    <button id="sendtokenbutton" class="btn btn-success btn-block btn-sm" disabled>Send <span class="currenttoken">BITCRYSTALS</span></button></div>
+                                    <button id="sendtokenbutton" class="btn btn-success btn-block btn-sm" disabled>Send <span class="currenttoken">BITCRYSTALS</span></button>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -439,6 +444,7 @@
                             <div id="passphrasebox" style="display: none;">
                                 <div id="newpassphrase">your passphrase</div>
                             </div>
+                            <!--
                             <a href="#" id="manualPassphrase" class="btn btn-primary btn-block keybutton">Change passphrase</a>
                             <div id="manualPassBox" style="display: none; margin-bottom: 10px;">
                                 <div class="row" style="padding: 0 10px 0 3px; ">
@@ -454,10 +460,13 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="hideEncrypted">
+                            
+                            -->
+                           <div class="hideEncrypted">
                                 <a href="#" id="encryptPassphrase" class="btn btn-primary btn-block keybutton">Encrypt Wallet</a>
                                 <div id="encryptPassphraseBox" style="display: none; margin-bottom: 10px;">
                                     <div class="row" style="padding: 0 10px 0 10px;">
+                                        <div class="text-danger" id="encryptPassphraseBoxError"></div>
                                         <div class="col-xs-9">
                                             <div style="width: 100%;"><input type="password" class="form-control" id="encryptPassword" placeholder="Enter new password"></div>
                                         </div>
@@ -492,16 +501,18 @@
                                     <form role="form" id="form_login">
                                         <div id="loginformerror" class="loginerror"></div>
                                         <div class="form-group text-left">
-                                            <label for="email">Email address</label>
-                                            <input type="email" class="form-control" id="email" placeholder="Email" name="email">
+                                            <label for="email">Username or email</label>
+                                            <input type="email" class="form-control" id="email" placeholder="Username or email" name="email">
                                         </div>
                                         <div class="form-group text-left">
                                             <label for="password">Password</label>
                                             <input type="password" class="form-control" id="password" placeholder="Password" name="password">
-                                        </div>                                 
-                                        <button class="btn btn-default">Login</button>                                      
+                                        </div>
+                                        <div class="text-right">
+                                        <button class="btn btn-success">Login</button> <a target="_blank" href="http://www.spellsofgenesis.com/users/register?lang=en" class="btn btn-info btn-register">Register</a>
+                                        </div>
                                     </form>
-                                    <div id="alreadyconnected" style="display : none;">Your wallet is already bind with your SOG account.</div>
+                                    <div id="alreadyconnected" style="display : none;">Your wallet is binded with your SOG account.</div>
                                 </div>                         
                             </div>
                             <!--<a href="#" style="margin-bottom: 15px;" class="btn btn-danger btn-block keybutton resetAddress">Reset Passphrase</a> -->
@@ -534,7 +545,7 @@
                     <!--<div id="btcPrice" style="display: none;"></div>-->
                 </div>
             </div>
-            <div id="footer"><div id="nameversion" style="float: left; padding:1px 0 0 8px;"></div><a href="#" id="testaction">test</a><img id="refreshWallet" src="asset/img/refresh.png" height="16" width="16"></div>       
+            <div id="footer"><div id="nameversion" style="float: left; padding:1px 0 0 8px;"></div><img id="refreshWallet" src="asset/img/refresh.png" height="16" width="16"></div>       
 
         </div>
     </body>
