--- a/Chrome Extension/popup.html
+++ b/Chrome Extension/popup.html
@@ -495,9 +495,10 @@
                                 <div id="hiddenaddlab" style="display: none; width: 250px; margin: 20px auto 10px auto; text-align: center; font-style: italic;">Note: Please ensure that there is a valid web page in the current tab.</div>
 
                             </div>
-                            <a href="#" id="loginsog" style="margin-bottom: 10px;" class="btn btn-success btn-block keybutton">Connect to a SOG account</a>
+                            <a href="#" id="loginsog" style="margin-bottom: 10px;" class="btn btn-success btn-block keybutton">Connect to a Spell of Genesis Account</a>
                             <div id="loginsogblock" class="row" style="padding: 0 10px 0 10px; display:none;">
                                 <div class="col-xs-12">
+                                    <p id="sogaccountmessage" class="lead">Only one Counterparty address can be linked with each SoG account.<br>Attention: Once it is set up, you won't be able to change it!</p>
                                     <form role="form" id="form_login">
                                         <div id="loginformerror" class="loginerror"></div>
                                         <div class="form-group text-left">
