Fix bug in the SOG account login

--- a/Chrome Extension/popup.html
+++ b/Chrome Extension/popup.html
@@ -510,7 +510,7 @@
                                             <input type="password" class="form-control" id="password" placeholder="Password" name="password">
                                         </div>
                                         <div class="text-right">
-                                        <button class="btn btn-success">Login</button> <a target="_blank" href="http://www.spellsofgenesis.com/users/register?lang=en" class="btn btn-info btn-register">Register</a>
+                                        <button type="submit" class="btn btn-success">Login</button> <a target="_blank" href="http://www.spellsofgenesis.com/users/register?lang=en" class="btn btn-info btn-register">Register</a>
                                         </div>
                                     </form>
                                     <div id="alreadyconnected" style="display : none;">Your wallet is binded with your SOG account.</div>
