--- a/Chrome Extension/popup.html
+++ b/Chrome Extension/popup.html
@@ -503,7 +503,7 @@
                                         <div id="loginformerror" class="loginerror"></div>
                                         <div class="form-group text-left">
                                             <label for="email">Username or email</label>
-                                            <input type="email" class="form-control" id="email" placeholder="Username or email" name="text">
+                                            <input type="text" class="form-control" id="email" placeholder="Username or email" name="email">
                                         </div>
                                         <div class="form-group text-left">
                                             <label for="password">Password</label>
