--- a/Chrome Extension/popup.html
+++ b/Chrome Extension/popup.html
@@ -124,10 +124,10 @@
                         <div align="center">
                             <button id="pinButton" type="submit" class="btn btn-primary">Open Wallet</button>
                         </div>
-                        <a href="#" id="resetwallet" style="margin-bottom: 10px; margin-top: 25px" class="btn btn-danger btn-block keybutton">Reset this wallet</a>
-                        <div id="resetwalletblock" class="row" style="padding: 0 10px 0 10px; display:none;">
+                        <a href="#" id="pinresetwallet" style="margin-bottom: 10px; margin-top: 25px" class="btn btn-danger btn-block keybutton">Reset this wallet</a>
+                        <div id="pinresetwalletblock" class="row" style="padding: 0 10px 0 10px; display:none;">
                             <p class="lead" style="color: #fff;">This operation will empty all the local storage. Be sure you kept your passphrase in a safe place.</p>
-                                <button id="resetwalletconfirmation" style="margin-bottom: 10px;" class="btn btn-danger btn-block keybutton">Let's do this!</button>                                                 
+                                <button id="pinresetwalletconfirmation" style="margin-bottom: 10px;" class="btn btn-danger btn-block keybutton">Let's do this!</button>                                                 
                         </div>
                     </div>
                 </form>
@@ -211,15 +211,16 @@
                                     var assetbalance = $("#xcpbalance").html();
                                     var currenttoken = $(".currenttoken").html();
                         -->
-                        <div id="addresslabeledit" align="center" style="width: 300px; display: none;">
-                            <div class="row" style="padding: 0 0 0 10px; margin: 0px 0 0px 0;">
-                                <div class="col-xs-9" style="margin-right: -20px">
-                                    <div style="width: 100%;">
+                        <div id="addresslabeledit" align="center" style="display: none; padding: 20px;">
+                            <div class="row">
+                                <div class="col-xs-6" style="margin-right: -20px">
+                                    <div>
                                         <input type="text" style="text-align: center" class="form-control" id="newPocketLabel" placeholder="Enter new label" maxlength="25">
                                     </div>
                                 </div>
-                                <div class="col-xs-3">
-                                    <button id="saveLabelButton" class="btn btn-default btn-block" style="width: 62px;">Save</button>
+                                <div class="col-xs-6">
+                                    <button id="saveLabelButton" class="btn btn-success " >Save</button>
+                                    <button id="saveLabelButtonCancel" class="btn btn-default " >Cancel</button>
                                 </div>
                             </div>
                         </div>
