--- a/Chrome Extension/popup.html
+++ b/Chrome Extension/popup.html
@@ -94,11 +94,15 @@
                         </div>
                     </div>
                     <div id="encryptyes" style="padding: 20px 0 0 0; display: none;">
-                        <form>
+                        <form id="encryptyesform">
                             <p class="lead">Enter Password (min 6 char):</p>
                             <p id="passwordentererror" class="text-danger" style="display: none;"></p>
-                            <div style="width: 100%; padding: 10px 0 30px 0;"><input type="password" style="text-align: center;" class="form-control" id="inputSplashPass"></div>
-                            <div align="center"><button id="setpinatsplash" type="submit" class="btn btn-default" disabled>Set Password</button></div>
+                            <div style="width: 100%; padding: 10px 0 30px 0;">
+                                <input type="password" style="text-align: center;" class="form-control" id="inputSplashPass">
+                            </div>
+                            <div align="center">
+                                <button id="setpinatsplash" type="submit" class="btn btn-default" disabled>Set Password</button>
+                            </div>
                         </form>
                     </div>
                     <div id="bindwallet" style="padding: 20px 0 0 0; display: none;">         
