Add quantity owned by cards

--- a/Chrome Extension/popup.html
+++ b/Chrome Extension/popup.html
@@ -645,7 +645,7 @@
                             <img src="asset/img/info-icon.png" height="16" width="16">
 
                         </a>
-                        <a href="#" id="testaction">test</a>
+                        <!--<a href="#" id="testaction">test</a>-->
                     </div>
                 </div>
 
