Fix digit limit when sending BTC New release

--- a/Chrome Extension/popup.html
+++ b/Chrome Extension/popup.html
@@ -290,7 +290,7 @@
                                 </div>
                                 <div style="padding: 0 5px 0 5px;">
                                     <div align="center" style="width: 100%; margin-bottom: 15px;">
-                                        <input type="number" class="form-control" id="sendtoamount" placeholder="Enter amount">
+                                        <input type="number" step="any" class="form-control" id="sendtoamount" placeholder="Enter amount">
                                     </div>
                                     <div align="center">
                                         <button id="sendtokenbutton" class="btn btn-success btn-block btn-sm" type="submit" disabled>Send <span class="currenttoken">BITCRYSTALS</span></button>
